# AoC_2024

./: .gitignore  CMakeLists.txt  README.md
src/Day1/: main.cpp
src/Day2/: main.cpp
src/Day3/: main.cpp
src/Day4/: main.cpp
src/Day5/: main.cpp
src/Day6/: main.cpp
src/Day7/: main.cpp
src/Day8/: main.cpp
